# StockPilot

./: .gitignore  CMakeLists.txt  CMakeLists.txt.OTGWMq  README.md  main.cpp  qml.qrc
include/: order.h  product.h  stockenv.h  stockenvcontroller.h  stockenvmanager.h
qml/: Main.qml
qml/component/: EnvView.qml
qml/pages/: EnvCreationPage.qml  EnvManagement.qml  HomePage.qml  SplashScreen.qml
src/: order.cpp  product.cpp  stockenv.cpp  stockenvcontroller.cpp  stockenvmanager.cpp
